# cookLLM

./: LICENSE  README.md  pyproject.toml
artifacts/: reranker_pairs.jsonl
artifacts/index/: bm25.pkl  chunks.jsonl  recipes.clean.jsonl  vector_meta.pkl  vectors.npy
configs/: default.yaml
data/: aliases.json
examples/: qrels.jsonl  queries.jsonl  recipes.jsonl  run.jsonl
src/recipe_rag/: __init__.py  schemas.py
src/recipe_rag/cli/: build_index.py  evaluate.py  make_reranker_data.py  query.py
src/recipe_rag/generation/: __init__.py  prompting.py  vllm_client.py
src/recipe_rag/indexing/: __init__.py  bm25.py  build.py  embeddings.py  tokenize.py  vector_store.py
src/recipe_rag/ingest/: __init__.py  crawlers.py
src/recipe_rag/preprocess/: __init__.py  chunking.py  normalization.py
src/recipe_rag/retrieval/: __init__.py  filters.py  fusion.py  pipeline.py  query_understanding.py  reranker.py
src/recipe_rag/training/: __init__.py
src/recipe_rag/training/llama_sft/: __init__.py  prepare_sft_data.py  train_lora.py
src/recipe_rag/training/reranker/: __init__.py  data_builder.py  generate_queries.py  metrics.py  train_bce_reranker.py
src/recipe_rag/utils/: __init__.py  io.py
tests/: test_metrics.py  test_preprocess_and_chunking.py  test_retrieval.py
